# FTT_StandAlone

./: .Rhistory  .gitignore  .readthedocs.yaml  Backend_Cedefop.py  Backend_FTT.py  Carbon price scenarios.xlsx  Changes.txt  Csv_creation_CT.py  Emissions_in_Default_market.csv  Emissions_in_Mandated_market.csv  Emissions_in_Total_market.csv  FTT Stand Alone Sphinx Homepage.lnk  FTT-H_gamma - Copy (2).csv  FTT-H_gamma - Copy (3).csv  FTT-H_gamma - Copy.csv  FTT-H_gamma.csv  FTT-P_gamma.csv  FTT-S-RawMatDistr.f90  FTT-S-Scrap.f90  FTT-S.f90  FTT-Tr_gamma.csv  FTTLCOS.f90  FTT_Stand_Alone_Launcher.cmd  FTT_Steel.md  Global_Settings.json  GridEmissionFactors.xlsx  IEA - Net Zero by 2050.xlsx  Indirect_NH3_demand.xlsx  LICENSE  MEWT_BE.xlsx  MEWT_DK.xlsx  MEWT_IT.xlsx  MEWT_LX.xlsx  MGAM_AC.xlsx  MGAM_AN.xlsx  MGAM_AR.xlsx  MGAM_AS.xlsx  MGAM_AT.xlsx  MGAM_AU.xlsx  MGAM_BE.xlsx  (+97 more)
.ipynb_checkpoints/: S1_MEWK_US-checkpoint.csv  run_file-checkpoint.py
Analysis/: Assess_crossover_price.py  Assess_crossover_price_old.py  Collect_all.xlsx  Copy_VTTI_to_BRR.py  Difference_between_scens_S0.csv  Figure 11-1.csv  Figure 11-2.csv  Generate_scenario_files.py  India_two_wheelers.py  PlotterLCOF.py  PlotterLCOF_India_TWV.py  Policies.csv  Policies_all.csv  Policies_by_sector.csv  Policies_sector_by_policy.csv  Policies_sector_by_policy_halved.csv  Policies_sequencing.csv  Policies_with_comments_Tim.csv  Policy_coordination.py  Various_cost_comparison_India.py  ZTLC.csv  ZTLC2.csv  ZTLC_India.csv  ZWFC_India.csv  ZWIC_India.csv  color_plotting.py  config.py  cost_declines_by_policy.py  crossover_years_plot.csv  e3me_regions_jan23.csv  emissions_cascade.py  filter_pickle_for_CodeOcean.py  function_for_tableplot.py  generation_graph_3x4.py  generation_graph_4x4.py  global_crossover_years.py  global_crossover_years_for_Fr.csv  global_crossover_years_for_Heat.csv  global_crossover_years_for_Power.csv  global_crossover_years_for_S0.csv  (+7 more)
Emulation/: README.md
Figures/: .gitignore  etrucks_figures.py  etrucks_figures_main.py  get_all_figures.bat
For CPAT scenarios/: CreateScenarioFiles.py  Csv_creation_CT.py  Csv_creation_CT_ac.py  EmissionFactors.csv
GUI/: gui_settings.csv  page_figures.py  shared.py  (+5 more)
(+12823 files in other folders)
